# spark-doctor

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/spark_doctor/: cli.py  models.py  shell.py
src/spark_doctor/collectors/: __init__.py  docker_runtime.py  firmware.py  gpu.py  logs.py  memory.py  network.py  os_info.py  processes.py
src/spark_doctor/privacy/: __init__.py  redact.py
src/spark_doctor/recipes/: __init__.py  known_registry.yaml  schema.py  validator.py
src/spark_doctor/reports/: __init__.py  console.py  forum.py  github.py  markdown.py
src/spark_doctor/rules/: __init__.py  backend.py  engine.py  memory.py  power.py  runtime.py  thermal.py
tests/: test_cli_smoke.py  test_gpu_sampler.py  test_recipe_validator.py  test_redaction.py  test_reports.py  test_rules_memory.py  test_rules_power.py
tests/fixtures/: healthy_minimal.json  memory_pressure.json  power_limited_14w.json  recipe_ok.yaml  recipe_tp_too_high.yaml  thermal_shutdown_like.json
